--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -21,11 +21,11 @@
     <icon density="mdpi" src="icons/iconAndroid.png" />
     <icon density="hdpi" src="icons/iconAndroid.png" />
     <icon density="xhdpi" src="icons/iconAndroid.png" />
-    <splash density="ldpi" platform="android" src="screen.png" />
-    <splash density="mdpi" platform="android" src="screen.png" />
-    <splash density="hdpi" platform="android" src="screen.png" />
-    <splash density="xhdpi" platform="android" src="screen.png" />
-    <splash density="xxhdpi" platform="android" src="screen.png" />
+    <splash density="ldpi" platform="android" src="splash/screen.png" />
+    <splash density="mdpi" platform="android" src="splash/screen.png" />
+    <splash density="hdpi" platform="android" src="splash/screen.png" />
+    <splash density="xhdpi" platform="android" src="splash/screen.png" />
+    <splash density="xxhdpi" platform="android" src="splash/screen.png" />
     <allow-intent href="market:*" />
     <preference name="android-minSdkVersion" value="15" />
     <preference name="android-targetSdkVersion" value="19" />
@@ -38,7 +38,6 @@
     </author>
     <content src="index.html" />
     <preference name="Orientation" value="portrait" />
-    <preference name="SplashScreen" value="screen" />
     <preference name="AutoHideSplashScreen" value="false" />
     <preference name="ShowSplashScreenSpinner" value="false" />
     <preference name="android-build-tool" value="gradle" />
